--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="main">
-        <div id="header">
+        <div id="header"> 
             <ul id="nav">
                 <li><a href="">Home</a></li>
                 <li><a href="">Band</a></li>
@@ -135,6 +135,43 @@
         <div id="footer">
 
         </div>
+    </div>
+
+    <div class="modal">
+        <div class="modal-container">
+            <div class="modal-cloes">
+                <i class="ti-close"></i>
+            </div>
+            <header class="modal-header">
+                <i class="modal-heading-icon ti-bag"></i>
+                Tickets
+            </header>
+            <div class="modal-body">
+                <label for="quantity" class="modal-label">
+                    <i class="ti-shopping-cart"></i>
+                    Tickets, $15 per person
+                </label>
+                <input id="quantity" type="text" class="modal-input" placeholder="How many?">
+            
+                </label>
+
+                <label for="email" class="modal-label">
+                    <i class="ti-user"></i>
+                    Send to
+                </label>
+                <input id="email" type="text" class="modal-input" placeholder="Enter email?">
+
+                <button id="buy-tickets">
+                    Pay <i class="ti-check"></i>
+                </button>
+            </div>
+
+            <footer class="modal-footer">
+                <p class="modal-help">Need <a href="">help?</a></p>
+
+            </footer>
+        </div>
+
     </div>
 
 
