--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="">Extras</a></li>
                         <li><a href="">Media</a></li>
                     </ul>
+
                 
                 </li>
             </ul>
@@ -71,8 +72,6 @@
                 </div>
 
             </div>
-
-
 
             <!-- about the tour -->
             <div class="tour-section">
@@ -121,7 +120,13 @@
                     </div>
                 </div>
 
+                
+
             </div>
+            <div class="slider">
+                <img src="./assets/img/slider/chicago.jpeg" alt="" class="slider-img">
+                <p class="slider-content"></p>
+            </div>            
 
             <!-- about the contact -->
             <div class="content-section">
